--- a/AUTHORS
+++ b/AUTHORS
@@ -1,2 +1,9 @@
 # Enter author names and emails here. One auther per line
 # for example -> John Doe john.doe@canberra.edu.au
+
+Radang Sarath u3241378@uni.canberra.edu.au
+Mikhail Oksanich u3243303@uni.canberra.edu.au
+Qi Zhuo u3210678@uni.canberra.edu.au
+Ankit Adhikari u3218762@uni.canberra.edu.au
+Dhanesh Bhatia u3244040@uni.canberra.edu.au
+
